--- a/blueprints/sveta/tf-inputs-echo.yaml
+++ b/blueprints/sveta/tf-inputs-echo.yaml
@@ -19,7 +19,7 @@ grains:
         name: '{{ inputs.agent_name }}'
         kubernetes:
           pod-annotations:
-            - my-annot: sveta
+            - my-annot: '{{ params.custom_pod_annotation_value }}'
       source:
         store: test-spec2-public
         path: terraform/tf-inputs-echo
