--- a/blueprints/sveta/tf-inputs-echo.yaml
+++ b/blueprints/sveta/tf-inputs-echo.yaml
@@ -9,7 +9,7 @@ inputs:
 
 outputs:
   tf_output:
-    value: '{{ .grains.tf-inputs-echo.outputs.test_string1 }}'
+    value: '1: {{ .grains.tf-inputs-echo.outputs.test_string1 }}, 2: {{ .grains.tf-inputs-echo.outputs.test_string2 }}'
 
 grains:
   tf-inputs-echo:
@@ -31,6 +31,8 @@ grains:
         #     {%- else -%}
         #     {{ .inputs.just_a_string }}
         #     {%- endif %}
+        - test_string2: 'ahoi {{ params.param1 }}'
       outputs:
         - test_string1
+        - test_string2
       
