--- a/blueprints/sveta/tf-inputs-echo.yaml
+++ b/blueprints/sveta/tf-inputs-echo.yaml
@@ -9,7 +9,7 @@ inputs:
 
 outputs:
   tf_output:
-    value: '1: {{ .grains.tf-inputs-echo.outputs.test_string1 }}, 2: {{ .grains.tf-inputs-echo.outputs.test_string2 }}'
+    value: '1: {{ .grains.tf-inputs-echo.outputs.test_string1 }}'
 
 grains:
   tf-inputs-echo:
@@ -17,9 +17,6 @@ grains:
     spec:
       agent:
         name: '{{ inputs.agent_name }}'
-        kubernetes:
-          pod-annotations:
-            - my-annot: '{{ .params.custom-pod-annotation-value }}'
       source:
         store: test-spec2-public
         path: terraform/tf-inputs-echo
@@ -31,8 +28,6 @@ grains:
         #     {%- else -%}
         #     {{ .inputs.just_a_string }}
         #     {%- endif %}
-        - test_string2: 'ahoi {{ params.param1 }}'
       outputs:
         - test_string1
-        - test_string2
       
