--- a/blueprints/wf-shell-grain-sleep-sveta.yaml
+++ b/blueprints/wf-shell-grain-sleep-sveta.yaml
@@ -16,7 +16,16 @@ inputs:
   sleep_secs:
     type: string
   file_try:
-    type: file
+    type: 'file'
+    max-size-MB: 50
+    max-files: 5
+    allowed-formats:
+      - 'zip'
+      - 'pdf'
+      - 'png'
+      - 'jpg'
+      - 'rtf'
+      - 'svg'
 
 grains:
   sleep:
