--- a/blueprints/sveta/tf-inputs-echo-params.yaml
+++ b/blueprints/sveta/tf-inputs-echo-params.yaml
@@ -7,6 +7,8 @@ inputs:
 outputs:
   tf_output:
     value: '1: {{ .grains.tf-inputs-echo.outputs.test_string1 }}, 2: {{ .grains.tf-inputs-echo.outputs.test_string2 }}'
+  param_output:
+    value: '{{ params.param3 }}'
 
 grains:
   tf-inputs-echo:
@@ -26,4 +28,14 @@ grains:
       outputs:
         - test_string1
         - test_string2
+  
+  sleep:
+    kind: shell
+    spec:
+      agent:
+        name: '{{.inputs.agent_name}}'
+      activities:
+        deploy:
+          commands:
+            - "sleep {{ .params.num_param }}"
       
