--- a/blueprints/sveta/tf-inputs-echo-params.yaml
+++ b/blueprints/sveta/tf-inputs-echo-params.yaml
@@ -38,4 +38,7 @@ grains:
         deploy:
           commands:
             - "sleep {{ .params.sleep_param }}"
+        destroy:
+          commands:
+            - "sleep {{ .params.sleep_param }}"
       
