--- a/environments/simple-tf-new.yaml
+++ b/environments/simple-tf-new.yaml
@@ -4,7 +4,7 @@ spec_version: 2
 environment:
   environment_name: eac-simple-env-3
   description: eac env for testing  1
-  owner_email: yakir.l@qualiw.com
+  owner_email: yakir.l@quali.com
   state: inactive 
 
  
