--- a/environments/simple-tf.yaml
+++ b/environments/simple-tf.yaml
@@ -1,14 +1,39 @@
 spec_version: 2
 
-kind: environment
-environment_name: Simple TF
-state: active
-owner_email: yakir.l@quali.com
-blueprint:
-  name: simple-tf-yakir
-  repository_name: test-spec2-public
-  commit: f6b2399e9f7bfa030148564c9598bdf985c343ff
+environment:
+  environment_name: eac-simple-env-3
+  description: eac env for testing  1
+  owner_email: yakir.l@quali.com
+  state: inactive 
+
+ 
 inputs:
-  compute_service_name: aks-prod-2  
-tags: {}
-grains: {}
+  compute_service_name:
+    type: agent
+    default: review1-vido
+    
+  tf_input:
+    type: string
+    default: "default_input_2"
+    sensitive: true
+
+outputs:
+  tf_output: 
+    value: '{{.grains.tf1.outputs.output2}}'
+  
+
+grains:
+  tf1:
+    kind: terraform
+    # tf-version: 1.3.5
+    spec:
+      source:        
+        path: terraform/simple-tf-module
+        store: test-spec2-public
+      agent:
+        name: '{{.inputs.compute_service_name}}'        
+      inputs:
+        - test_input1: '{{.inputs.tf_input}}'
+        - test_input2: "input2"        
+      outputs:
+        - output2
