--- a/blueprints/shell-can-fail.yaml
+++ b/blueprints/shell-can-fail.yaml
@@ -20,4 +20,4 @@ grains:
             - name: echo
               command: "echo 'will fail: {{ .inputs.should_fail }}'"
             - name: exit
-              command: "if [ {{ .inputs.should_fail }} = true ]; then exit 1; else exit 0; fi;"
+              command: "if [ {{ .inputs.should_fail }} = true ]; then exit 1; else exit 0; fi"
