--- a/blueprints/super-blueprint-v2.yaml
+++ b/blueprints/super-blueprint-v2.yaml
@@ -15,9 +15,9 @@ outputs:
   terraform_output_from_submodule:
     value: '{{.grains.terraform3.outputs.output_from_dub_module}}'
   cfn_bucket_name:
-    value: '{.grains.cfn1.outputs.BucketName}'
+    value: '{{.grains.cfn1.outputs.BucketName}}'
   terragrunt_bucket_name:
-    value: '{.grains.terragrunt1.outputs.bucket_arn}'
+    value: '{{.grains.terragrunt1.outputs.bucket_arn}}'
 
 inputs:
   namespace:
