--- a/blueprints/__experimental__helm-simple.yaml
+++ b/blueprints/__experimental__helm-simple.yaml
@@ -22,6 +22,8 @@ grains:
 
       inputs:
         - replicaSet: 1
-        - input_2: 'test'
+        - input_2: 'test1'
         - input_3: 3
+
+
 
