--- a/blueprints/tf-with-backend.yaml
+++ b/blueprints/tf-with-backend.yaml
@@ -18,6 +18,8 @@ grains:
         store: test-spec2-public
       agent:
         name: '{{.inputs.compute_service_name}}'
+      inputs:
+        test_input2: somevlaue
       # scripts:
       #   pre-tf-init:
       #     source:
