--- a/blueprints/bp-nest-shell-echo-sveta.yaml
+++ b/blueprints/bp-nest-shell-echo-sveta.yaml
@@ -20,6 +20,7 @@ grains:
       inputs:
         - agent_name: '{{.inputs.agent_name}}'
         - input_str: '{{.inputs.input_str}}'
+        - test_update: '{{.inputs.tester}}'
       outputs:
         - out1
         - output_str
