--- a/blueprints/shell-echo-dynamic-out-sveta.yaml
+++ b/blueprints/shell-echo-dynamic-out-sveta.yaml
@@ -23,6 +23,8 @@ grains:
     spec:
       agent:
         name: '{{.inputs.agent_name}}'
+      inputs:
+        - hi: 'bye'
       activities:
         deploy:
           commands:
