--- a/blueprints/bp-nest-shell-echo-sveta.yaml
+++ b/blueprints/bp-nest-shell-echo-sveta.yaml
@@ -38,3 +38,17 @@ grains:
       outputs:
         - out1
         - output_str
+
+  bp-shell-3:
+    kind: blueprint
+    depends-on: bp-shell-1
+    spec:
+      source:
+        path: blueprints/shell-echo-dynamic-out-sveta.yaml
+        store: test-spec2-public
+      inputs:
+        - agent_name: '{{.inputs.agent_name}}'
+        - input_str: '{{.grains.bp-shell-1.outputs.out1}}'
+      outputs:
+        - out1
+        - output_str
