--- a/blueprints/bp-nest-shell-echo-sveta.yaml
+++ b/blueprints/bp-nest-shell-echo-sveta.yaml
@@ -12,6 +12,9 @@ inputs:
   tester2:
     type: string
     default: yoooo
+  tester3:
+    type: string
+    default: yoooo
 
 grains:
   bp-shell-1:
