--- a/blueprints/bp-nest-shell-echo-sveta.yaml
+++ b/blueprints/bp-nest-shell-echo-sveta.yaml
@@ -12,6 +12,10 @@ inputs:
   tester2:
     type: string
     default: moooo
+outputs:
+  out from here:
+    quick: true
+    value: 'lemme out'
 
 grains:
   bp-shell-1:
@@ -42,6 +46,7 @@ grains:
       outputs:
         - out1
         - output_str
+        - out_and_about
 
   bp-shell-3:
     kind: blueprint
@@ -59,7 +64,7 @@ grains:
 
   bp-shell-5:
     kind: blueprint
-    depends-on: bp-shell-1
+    depends-on: bp-shell-3
     spec:
       source:
         path: blueprints/shell-echo-dynamic-out-sveta.yaml
