--- a/blueprints/helm-simple-yakir.yaml
+++ b/blueprints/helm-simple-yakir.yaml
@@ -41,6 +41,7 @@ grains:
         - dep up helm/nginx-test
       release: '{{.inputs.release_name}}'
       target-namespace: '{{.inputs.namespace}}'
+      use-storage: false
       inputsv2:
         - replicaCount: '{{.inputs.replica_count}}'
         - image.debug: 'true'
