--- a/blueprints/complex-dependencies.yaml
+++ b/blueprints/complex-dependencies.yaml
@@ -58,7 +58,7 @@ grains:
       agent:
         name: '{{.inputs.execution_host}}'
       commands:
-        - dep up chart/hello
+        - dep up charts/hello-world
       release: '{{.inputs.release_name}}'
       target-namespace: '{{.inputs.namespace}}'     
       
@@ -96,7 +96,7 @@ grains:
         name: '{{.inputs.execution_host}}'
         service-account: '{{.inputs.service_account}}'
       commands:
-        - dep up chart/hello
+        - dep up charts/hello-world
       release: '{{.inputs.release_name}}'
       target-namespace: '{{.inputs.namespace}}'      
   
@@ -109,7 +109,7 @@ grains:
       agent:
         name: '{{.inputs.execution_host}}'
       commands:
-        - dep up chart/hello
+        - dep up charts/hello-world
       release: '{{.inputs.release_name}}'
       target-namespace: '{{.inputs.namespace}}'        
         
