--- a/blueprints/bp-nest-shell-echo-sveta.yaml
+++ b/blueprints/bp-nest-shell-echo-sveta.yaml
@@ -5,7 +5,8 @@ inputs:
     type: agent
   input_str:
     type: string
-    default: some text
+    default: new texture
+    sensitive: true
     description: describe me
   tester:
     type: string
