--- a/blueprints/bp-nest-shell-echo-sveta.yaml
+++ b/blueprints/bp-nest-shell-echo-sveta.yaml
@@ -32,7 +32,7 @@ outputs:
 description: 
   'i have ruined this bp AGAIN, sorry, yarin'
 instructions:
-  text: 'this is how you should operate this thingyzzz'
+  text: 'this is how you should operate thissss thingyzzz'
 
 grains:
   bp-shell-1:
