--- a/blueprints/tf-complex-types.yaml
+++ b/blueprints/tf-complex-types.yaml
@@ -97,7 +97,7 @@ grains:
         - test_map_string2: '{{.grains.first.outputs.test_map_string}}'   
         - test_object: '{{.grains.first.outputs.test_object}}'
         - test_liquid: env-id-{{sandboxId}}
-        - test_string_2: '{{.grains.first.test_string_2}}'
+        - test_string_2: '{{.grains.first.outputs.test_string_2}}'
       outputs:
         - test_string
         - test_list_string
