--- a/blueprints/blueprint-update-test.yaml
+++ b/blueprints/blueprint-update-test.yaml
@@ -22,6 +22,26 @@ outputs:
     
 
 grains:
+  tf3:
+    kind: terraform
+    tf-version: 1.5.3
+    spec:
+      source:
+        path: terraform/simple-tf-module
+        store: test-spec2-public
+      agent:        
+        name: '{{.inputs.compute_service_name}}'
+      inputs:
+        - test_input2: "input2"
+        - tester: "yo"
+      env-vars:
+        - VAR1: VAL1
+      # tfvars-files:
+      #   - source:
+      #       store: test-spec2-public
+      #       path: terraform/sub-module/values.tfvars
+      outputs:
+        - output2
   tf2:
     kind: terraform
     tf-version: 1.5.3
