--- a/blueprints/blueprint-update-test.yaml
+++ b/blueprints/blueprint-update-test.yaml
@@ -6,6 +6,9 @@ inputs:
   inputnew:
     type: string
     default: vlabla
+  inputnew2:
+    type: string
+    default: bla2
 
 outputs:
   output1:
