--- a/blueprints/blueprint-update-test.yaml
+++ b/blueprints/blueprint-update-test.yaml
@@ -9,6 +9,8 @@ inputs:
   inputnew2:
     type: string
     default: bla2
+  input-no-default:
+    type: string
 
 outputs:
   output1:
@@ -38,7 +40,7 @@ grains:
       agent:        
         name: '{{.inputs.compute_service_name}}'
       inputs:
-        - test_input2: '{{.inputs.inputnew}}'
+        - test_input2: '{{.inputs.input-no-default}}'
         - tester: "yo"
       env-vars:
         - VAR1: VAL1
