--- a/blueprints/super-blueprint-v2.yaml
+++ b/blueprints/super-blueprint-v2.yaml
@@ -1,5 +1,4 @@
-spec_version: 2-preview
-
+spec_version: 2
 description: 'blueprint aim to cover most grains and features, while require minimal setup.  requirements: agent with service account with aws role and this repo onboarded'
 
 
@@ -18,6 +17,8 @@ outputs:
     value: '{{.grains.cfn1.outputs.BucketName}}'
   terragrunt_bucket_name:
     value: '{{.grains.terragrunt1.outputs.bucket_arn}}'
+  shell_output:
+    value: '{{.inputs.generic_input}} {{ .grains.shell.activities.deploy.commands.my_shell_script.outputs.output1 }} {{.inputs.generic_input}}'  
 
 inputs:
   namespace:
@@ -332,7 +333,24 @@ grains:
     spec:
       agent:
         name: '{{.inputs.execution_host1}}'
+      files:
+        - source: test-spec2-public
+          path: scripts/echo.sh        
+      env_vars:
+        - VAR_NAME1: var1
       activities:
         deploy:
+          commands:                                        
+            - name: my_shell_script
+              command: "source echo.sh"
+              outputs:
+                - output1
+                - output2
+            - 'echo second command'            
+        destroy:
           commands:
-            - echo environment id '{{ sandboxid | downcase }}'
+            - echo "destroying"
+      # activities:
+      #   deploy:
+      #     commands:
+      #       - echo environment id '{{ sandboxid | downcase }}'
