--- a/environments/blueprint-update-test-eac.yaml
+++ b/environments/blueprint-update-test-eac.yaml
@@ -1,7 +1,7 @@
 spec_version: 2
 environment:
   environment_name: blueprint-update-test-EaC
-  state: active
+  state: inactive
   owner_email: ronen.a@quali.com
 # inputs can be provided by the user, API or CI plugin when creating an environment.
 inputs:
