--- a/blueprints/shell-echo-with-resource-requirements-4-nest.yaml
+++ b/blueprints/shell-echo-with-resource-requirements-4-nest.yaml
@@ -25,4 +25,4 @@ grains:
         deploy:
           commands:
             - name: 'echo_cmd'
-              command: 'echo ''{{ .resources.tenants }}'' '
+              command: 'echo ''{{ .resources.tenants | replace: "''", "\''" }}'' '
