--- a/environments/eac-simple-5.yaml
+++ b/environments/eac-simple-5.yaml
@@ -5,7 +5,7 @@ environment:
   environment_name: eac-simple-5
   description: eac env for testing  1
   owner_email: yakir.l@quali.com
-  state: inactive
+  state: active
   # spaces:
   #   - Test
 
