--- a/blueprints/simple-tf-yakir.yaml
+++ b/blueprints/simple-tf-yakir.yaml
@@ -6,7 +6,7 @@ inputs:
 
 outputs:
   output1:
-    value: "http://www.google.com"
+    value: "http://www.google1.com"
     kind: link
     quick: true
   output2:
