--- a/blueprints/ansible-print-env.yaml
+++ b/blueprints/ansible-print-env.yaml
@@ -15,6 +15,6 @@ grains:
       agent:
         name: '{{ .inputs.agent_name }}'
       env-vars:
-        - MY_VAR: 'my value new'
-        - ARM_USE_OIDC: true
+        - MY_VAR: 'my value'
+        # - ARM_USE_OIDC: true
       
