--- a/blueprints/wf-shell-grain-sleep-sveta.yaml
+++ b/blueprints/wf-shell-grain-sleep-sveta.yaml
@@ -6,7 +6,7 @@ workflow:
   triggers:
     - type: manual
     - type: cron
-      cron: '0 * * * *'
+      cron: '/5 * * * *'
       overridable: true
 
 inputs:
