--- a/blueprints/wf-print-env-resource.yaml
+++ b/blueprints/wf-print-env-resource.yaml
@@ -2,7 +2,7 @@ spec_version: 2
 
 workflow:
   scope: env_resource
-  # resource-types: aws_instance
+  resource-types: aws_instance, aws_s3_bucket, aws_s3_bucket_object, AWS::S3::Bucket
   triggers:
     - type: manual
     - type: cron
