--- a/blueprints/bp-inputs-echo-with-intersight-source.yaml
+++ b/blueprints/bp-inputs-echo-with-intersight-source.yaml
@@ -2,10 +2,10 @@ spec_version: 2
 description: output intput
 
 inputs:
-  input1:
+  server:
     type: input-source
     source-name: servers
 
 outputs:
-  output1:
+  server:
     value: '{{ .inputs.input1 }}'
