--- a/blueprints/bp-inputs-echo-with-intersight-source.yaml
+++ b/blueprints/bp-inputs-echo-with-intersight-source.yaml
@@ -19,7 +19,7 @@ inputs:
     depends-on: credential
     overrides:
       - path: "/api/v1/search/SearchItems"
-      - filter_query: 'IndexMotypes eq virtualization.BaseVirtualMachine'
+      - filter_query: '(IndexMotypes eq virtualization.BaseVirtualMachine) and (IsTemplate ne ''true'')'
 
 outputs:
   server:
