use source with bad credentials

--- a/blueprints/bp-inputs-echo-with-intersight-source.yaml
+++ b/blueprints/bp-inputs-echo-with-intersight-source.yaml
@@ -22,7 +22,7 @@ inputs:
 
   switch:
     type: input-source
-    source-name: servers
+    source-name: bad-creds
     depends-on: credential
     overrides:
       - filter_query: '(ObjectType eq network.Element) and (SwitchType eq ''NexusDevice'')'
